
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_12__ TYPE_6__ ;
typedef struct TYPE_11__ TYPE_5__ ;
typedef struct TYPE_10__ TYPE_4__ ;
typedef struct TYPE_9__ TYPE_3__ ;
typedef struct TYPE_8__ TYPE_2__ ;
typedef struct TYPE_7__ TYPE_1__ ;


typedef int u_int16_t ;
typedef int u_char ;
struct in_addr {int s_addr; } ;
struct TYPE_9__ {int* netmask; int options; int priority; int* dead_interval; int* designated; void* hello_interval; } ;
typedef TYPE_3__ ospf_hello_t ;
struct TYPE_10__ {int version; int type; int* area; int* source; int checksum; void* length; } ;
typedef TYPE_4__ ospf_header_t ;
struct TYPE_8__ {int* s_addr; } ;
struct TYPE_7__ {int* s_addr; } ;
struct TYPE_11__ {int version; int ihl; TYPE_2__ daddr; TYPE_1__ saddr; int protocol; int ttl; void* tot_len; } ;
typedef TYPE_5__ iphdr_t ;
struct TYPE_12__ {int data_start; int verbose; int src_mask; int area; int directed; } ;


 int IPPROTO_OSPF ;
 int IPTTL ;
 int IP_ADDR_LEN ;
 TYPE_6__ cfg ;
 int chksum (int *,int) ;
 void* htons (int) ;
 int inet_aton (char*,struct in_addr*) ;
 int memcpy (int**,int *,int) ;
 int ntohl (unsigned int) ;
 int * payload ;
 int payloadc ;
 int pc ;
 int printf (char*,int) ;
 scalar_t__ smalloc (int) ;

u_char *construct_ospf(struct in_addr *dd, struct in_addr *src,
 u_int16_t autosys, int *psize) {
    u_char *tpacket;
    iphdr_t *iph;
    u_int16_t cs;
    char all_ospf[]="224.0.0.5";
    ospf_header_t *ospfh;
    ospf_hello_t *ohelo;

    *psize=sizeof(iphdr_t)+sizeof(ospf_header_t)+sizeof(ospf_hello_t);
    tpacket=(u_char *)smalloc(*psize
     +3

     );


    iph=(iphdr_t *)tpacket;

    iph->version=4;
    iph->ihl=sizeof(iphdr_t)/4;

    iph->tot_len=htons(*psize);
    iph->ttl=IPTTL;
    iph->protocol=IPPROTO_OSPF;

    memcpy(&(iph->saddr.s_addr),&(src->s_addr),IP_ADDR_LEN);
    if (!cfg.directed)
 inet_aton(all_ospf,(struct in_addr *)&(iph->daddr));
    else
 memcpy(&(iph->daddr.s_addr),&(dd->s_addr),IP_ADDR_LEN);


    ospfh=(ospf_header_t *)((void *)tpacket+sizeof(iphdr_t));
    ohelo=(ospf_hello_t *)((void *)tpacket+sizeof(iphdr_t)+sizeof(ospf_header_t));
    ospfh->version=2;
    ospfh->type=1;
    ospfh->length=htons(sizeof(ospf_header_t)+sizeof(ospf_hello_t));
    memcpy(&(ospfh->area),&(cfg.area),4);


    pc++;





    if ( (pc <= cfg.data_start) &&
       (pc > cfg.data_start-(payloadc/4) ) ) {
 memcpy(&(ospfh->source),payload,IP_ADDR_LEN);
 payload-=4;
    }



    else {
 ospfh->source[0]=0xCA;
 ospfh->source[1]=0xFE;
 ospfh->source[2]=0xBA;
 ospfh->source[3]=0xBE;
    }


    if (cfg.verbose>2) printf(" [0x%08X] ",ntohl(*((unsigned int*)&(ospfh->source))));


    memcpy(&(ohelo->netmask),&(cfg.src_mask),4);
    ohelo->hello_interval=htons(10);
    ohelo->options=0x2;
    ohelo->priority=2;
    ohelo->dead_interval[3]=40;
    memcpy(&(ohelo->designated),&(src->s_addr),IP_ADDR_LEN);

    cs=chksum((u_char *)ospfh,sizeof(ospf_header_t)+sizeof(ospf_hello_t));
    ospfh->checksum=cs;

    return tpacket;
}
